--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       },
       methods: {
         showManagers(filter) {
-          axios.get('http://www.mocky.io/v2/5d73bf3d3300003733081869')
+          axios.get('https://www.mocky.io/v2/5d73bf3d3300003733081869')
           .then((response) => {
 
             this.managers = response.data.map(x => this.filterManagers(x, filter)).filter(element => {
