--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <div id="app">
     <nav class="navbar navbar-expand-lg">
       <a class="navbar-brand" href="#">
-          <img class="navbar--img" src="./assets/logo.png" alt="">
+          <img class="navbar--img" src="https://raw.githubusercontent.com/thenicholascoder/growthopsfrontend/main/assets/logo.png" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon">
@@ -128,7 +128,7 @@
             <div  v-for="(manager, i) in managers" class="col-sm-4" style=" padding: 30px;">
               <div class="row">
                 <div class="col-4">
-                  <img src="./assets/userphoto.png" style="height: 80px; width: auto;" alt="">
+                  <img src="https://raw.githubusercontent.com/thenicholascoder/growthopsfrontend/main/assets/userphoto.png" style="height: 80px; width: auto;" alt="">
                 </div>
                 <div class="col-8">
                   <h5><strong>{{ manager.name | upper }}</strong></h5>
