--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             .col-sm-4 {
               width: 100%;
             }
+            .nav-item {
+                width: 100%;
+            }
           }
 
         .navbar {
