--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             .col-sm-4 {
               width: 100%;
             }
-            .nav-item {
-                width: 100%;
+            .nav-link {
+                width: 400px;
             }
           }
 
