--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon">
-          <svg viewBox="0 0 100 80" width="20" height="20" style="fill: white;" >
+          <svg viewBox="0 0 100 80" width="20" height="20" style="fill: white; margin-right: 25px;" >
             <rect width="100" height="20"></rect>
             <rect y="30" width="100" height="20"></rect>
             <rect y="60" width="100" height="20"></rect>
