--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
         .manager-details {
           font-size: 0.8em;
         }
+        
+        .navbar-toggler {
+            margin-right: 15px;
+        }
     </style>
 </head>
 <body>
@@ -95,7 +99,7 @@
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon">
-          <svg viewBox="0 0 100 80" width="20" height="20" style="fill: white; margin-right: 25px;" >
+          <svg viewBox="0 0 100 80" width="20" height="20" style="fill: white;" >
             <rect width="100" height="20"></rect>
             <rect y="30" width="100" height="20"></rect>
             <rect y="60" width="100" height="20"></rect>
